Ajout des graphiques sur le tableau de bord

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "chart.js": "^4.4.8",
     "mjml": "^4.15.3",
     "mongodb": "^6.13.0",
     "next": "^15.1.7",
@@ -57,6 +58,7 @@
     "nodemailer": "^6.9.16",
     "prisma-json-types-generator": "^3.2.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.0",
     "react-toastify": "^11.0.3",
