Ajouter un ou des porteurs UI

--- a/.eslintrc
+++ b/.eslintrc
@@ -68,18 +68,24 @@
             "message": "Le domain représente le métier, il ne dépend d'aucun élément extérieur."
           },
           {
-            "target": ["src/use-cases"],
+            "target": ["src/use-cases/**[^test].ts"],
             "from": ["src", "node_modules"],
-            "except": ["domain", "use-cases", "shared"],
+            "except": ["domain", "shared"],
             "message": "Les use cases automatisent l'interaction entre les règles métiers et les ports représentant des éléments extérieurs."
           },
           {
-            "target": ["src/gateways"],
+            "target": ["src/use-cases/**test.ts"],
+            "from": ["src", "node_modules"],
+            "except": ["domain", "use-cases", "use-cases/shared"],
+            "message": "Les use cases automatisent l'interaction entre les règles métiers et les ports représentant des éléments extérieurs."
+          },
+          {
+            "target": ["src/gateways/**[^test].ts"],
             "from": ["src", "node_modules"],
             "except": [
               "domain",
               "use-cases",
-              "gateways",
+              "gateways/shared",
               "shared",
               "@prisma/client",
               "next-auth",
@@ -89,9 +95,29 @@
             "message": "Les gateways n'ont besoin que du domain et d'implementer les ports définis dans les use cases."
           },
           {
-            "target": ["src/presenters"],
+            "target": ["src/gateways/**test.ts"],
+            "from": ["src", "node_modules"],
+            "except": [
+              "domain",
+              "use-cases",
+              "gateways",
+              "shared",
+              "@prisma/client",
+              "nodemailer",
+              "mjml"
+            ],
+            "message": "Les gateways n'ont besoin que du domain et d'implementer les ports définis dans les use cases."
+          },
+          {
+            "target": ["src/presenters/**[^test].ts"],
             "from": ["src", "node_modules"],
             "except": ["use-cases", "presenters/shared", "shared"],
+            "message": "Les presenters préparent les données à afficher et n'ont pas connaissance du domain ni des gateways."
+          },
+          {
+            "target": ["src/presenters/**test.ts"],
+            "from": ["src", "node_modules"],
+            "except": ["use-cases", "presenters"],
             "message": "Les presenters préparent les données à afficher et n'ont pas connaissance du domain ni des gateways."
           },
           {
