--- a/.slugignore
+++ b/.slugignore
@@ -2,3 +2,10 @@
 .husky
 .yarn
 src
+node_modules/@babel
+node_modules/@opentelemetry
+node_modules/@gouvfr/dsfr/example
+node_modules/@gouvfr/dsfr/src
+node_modules/@gouvfr/dsfr/dist/component
+node_modules/@gouvfr/dsfr/dist/dsfr
+node_modules/@gouvfr/dsfr/storybook
