--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
     ignore:
       - dependency-name: "eslint*"
       - dependency-name: "@typescript-eslint/*"
+      - dependency-name: "@stylistic/eslint-plugin"
     groups:
       minor-and-patch:
         update-types:
