--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,7 @@ updates:
       interval: "weekly"
       day: "monday"
     ignore:
-      - dependency-name: "eslint*"
-      - dependency-name: "@typescript-eslint/*"
-      - dependency-name: "@stylistic/eslint-plugin"
+      - dependency-name: "*eslint*"
     groups:
       minor-and-patch:
         update-types:
