--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:ts": "eslint src seeds --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
+    "lint:ts": "eslint src seeds --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
     "migration:reset": "yarn prisma:reset && yarn migration:all",
     "migration:all": "yarn migration:region && yarn migration:departement && yarn migration:groupement && yarn migration:structure && yarn migration:utilisateur && yarn migration:gouvernance",
     "migration:departement": "tsx seeds/departement.ts",
@@ -66,10 +66,11 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@stryker-mutator/core": "^8.7.1",
     "@stryker-mutator/typescript-checker": "^8.7.1",
     "@stryker-mutator/vitest-runner": "^8.7.1",
-    "@stylistic/eslint-plugin": "3.1.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -79,22 +80,22 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.13.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-istanbul": "^3.0.7",
+    "@vitest/eslint-plugin": "^1.1.36",
     "depcheck": "^1.4.7",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.1.3",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-sonarjs": "^3.0.1",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-plugin-vitest": "0.4.1",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "knip": "^5.45.0",
@@ -106,6 +107,7 @@
     "stylelint-order": "^6.0.4",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.7",
     "vitest-dom": "^0.1.1"
