SGN devient MIN

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-DATABASE_URL=postgresql://sgn:sgn@localhost:5432/sgn?schema=public
+DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=public
 # Ne sert que pour les review app
 SHADOW_DATABASE_URL=
 # Debug de Prisma https://www.prisma.io/docs/orm/prisma-client/debugging-and-troubleshooting/debugging
