--- a/common-services.yml
+++ b/common-services.yml
@@ -2,12 +2,12 @@ services:
   postgres:
     image: postgres:16.6-alpine # Conserver la même version avec celle de Scalingo
     environment:
-      POSTGRES_DB: sgn
-      POSTGRES_USER: sgn
-      POSTGRES_PASSWORD: sgn
+      POSTGRES_DB: min
+      POSTGRES_USER: min
+      POSTGRES_PASSWORD: min
     command: ["postgres", "-c", "log_statement=all", "-c", "max_connections=30"]
     healthcheck:
-      test: pg_isready -U sgn
+      test: pg_isready -U min
       interval: 10s
       timeout: 5s
       retries: 5
