Deploy vers dataspace

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://min:min@localhost:5434/min?schema=public&connection_limit=1
+DATABASE_URL=postgresql://min:min@localhost:5434/min?schema=min&connection_limit=1
 NEXT_PUBLIC_HOST=http://example.com
 
 ANALYZE=false
