--- a/.env
+++ b/.env
@@ -31,3 +31,9 @@ SMTP_SUPER_ADMIN_HOST=0.0.0.0
 SMTP_SUPER_ADMIN_USER=
 SMTP_SUPER_ADMIN_PASSWORD=
 SMTP_SUPER_ADMIN_PORT=1025
+
+AWS_S3_HOST=A_REMPLIR
+AWS_S3_REGION=A_REMPLIR
+AWS_S3_ACCESS_KEY=A_REMPLIR
+AWS_S3_SECRET_KEY=A_REMPLIR
+AWS_S3_BUCKET=A_REMPLIR
