--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bundle:analyze": "ANALYZE=true yarn build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.775.0",
     "@gouvfr/dsfr": "^1.13.1",
     "@next/bundle-analyzer": "^15.2.4",
     "@prisma/client": "^6.5.0",
