--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ SMTP_SUPER_ADMIN_HOST=0.0.0.0
 SMTP_SUPER_ADMIN_USER=
 SMTP_SUPER_ADMIN_PASSWORD=
 SMTP_SUPER_ADMIN_PORT=1025
+
+AWS_S3_REGION=
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+AWS_S3_BUCKET=
