Ajoute de devbox and customisation des gitignore et prettierignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 # misc
 .DS_Store
 *.pem
+private/
 
 # debug
 npm-debug.log*
@@ -39,3 +40,7 @@ next-env.d.ts
 # custom
 client-fne
 .stryker-tmp
+
+# IDE
+*.code-workspace
+.cursor/
