--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "jscpd": "^4.0.5",
     "jsdom": "^26.0.0",
     "knip": "^5.47.0",
     "prettier": "^3.5.3",
