--- a/common-services.yml
+++ b/common-services.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16.6-alpine # Conserver la même version avec celle de Scalingo
+    image: postgres:15.12-alpine # Garder la même version que celle de la production
     environment:
       POSTGRES_DB: min
       POSTGRES_USER: min
