--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:reset": "prisma migrate reset -f && yarn prisma:generate:fne",
     "psql:local": "docker compose up -d postgres-dev && docker exec -it min_db_dev psql -U min min",
+    "psql:init": "bash scripts/psql-init.sh",
     "psql:test": "docker compose up -d postgres-test && docker exec -it min_db_test psql -U min min",
     "start": "next start",
     "test": "yarn dotenv:test -- yarn prisma:migrate && yarn dotenv:test -- vitest run",
