--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/mjml": "^4",
     "@types/node": "^22.14.1",
     "@types/nodemailer": "^6",
