wip - ajout du client extern

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@prisma/client-extern": ["./generated/client-extern"]
     },
     "types": ["vitest/globals"]
   },
