--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 
 DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min
+EXTERN_DATABASE_URL=postgresql://min:min@localhost:5432/min
 # Debug de Prisma https://www.prisma.io/docs/orm/prisma-client/debugging-and-troubleshooting/debugging
 # DEBUG=*
 CO_NUM_DATABASE_NAME=test
