--- a/common-services.yml
+++ b/common-services.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgis/postgis:16-master # Conserver la même version avec celle de Scalingo
+    image: postgis/postgis:16-3.5-alpine
     environment:
       POSTGRES_DB: min
       POSTGRES_USER: min
