PLUS DE MIGRATION ! ajout du multischema

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "bash:production": "scalingo -a mon-inclusion-numerique run --size XL bash",
     "build": "./build.sh",
-    "build:dev": "yarn prisma:migrate && yarn prisma:generate:fne && next build",
+    "build:dev": "next build",
     "check": "yarn dedupe --check && yarn deadcode && yarn typecheck && yarn prisma format --check && yarn prisma format --check --schema seeds/fne/schema.prisma && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
-    "dev": "yarn prisma:migrate && yarn prisma:generate:fne && next dev --turbo",
+    "dev": "next dev --turbo",
     "dotenv:test": "dotenv -e .env.test",
     "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
