--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
-    "dev": "next dev --turbo",
+    "dev": " next dev --turbo",
+    "devmigrate": "yarn prisma:migrate && yarn prisma:generate:fne && yarn dev",
     "dotenv:test": "dotenv -e .env.test",
     "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
