--- a/.env
+++ b/.env
@@ -32,7 +32,8 @@ SMTP_SUPER_ADMIN_USER=
 SMTP_SUPER_ADMIN_PASSWORD=
 SMTP_SUPER_ADMIN_PORT=1025
 
-AWS_S3_REGION=
-AWS_S3_ACCESS_KEY=
-AWS_S3_SECRET_KEY=
-AWS_S3_BUCKET=
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+S3_REGION=fr-par
+S3_BUCKET=min-bucket
+S3_ENDPOINT=http://localhost:9000
