--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,28 @@ services:
         source: mailpit_data_dev
         target: /data
 
+  minio:
+    image: minio/minio:latest
+    container_name: min_minio
+    ports:
+      - "9000:9000" # API
+      - "9001:9001" # Console
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    volumes:
+      - type: volume
+        source: minio_data
+        target: /data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+
 volumes:
   postgres_data:
   postgres_data_test:
   mailpit_data_dev:
+  minio_data:
