--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "test:mutation:backend": "yarn dotenv:test -- stryker run stryker-backend.conf.json",
     "test:watch": "yarn dotenv:test -- vitest",
     "typecheck": "tsc",
-    "bundle:analyze": "ANALYZE=true yarn build"
+    "bundle:analyze": "ANALYZE=true yarn build",
+    "minio:init": "bash scripts/init-minio.sh",
+    "minio:start": "docker compose up -d minio && yarn minio:init"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
