Suppression FNE. Changement dans le process de build

--- a/package.json
+++ b/package.json
@@ -7,29 +7,22 @@
     "bash:production": "scalingo -a mon-inclusion-numerique run --size XL bash",
     "build": "./build.sh",
     "build:dev": "next build",
-    "check": "yarn dedupe --check && yarn deadcode && yarn typecheck && yarn prisma format --check && yarn prisma format --check --schema seeds/fne/schema.prisma && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
+    "check": "yarn dedupe --check && yarn deadcode && yarn typecheck && yarn prisma format --check && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": " next dev --turbo",
-    "devmigrate": "yarn prisma:migrate && yarn prisma:generate:fne && yarn dev",
+    "devmigrate": "yarn prisma:migrate && yarn dev",
     "dotenv:test": "dotenv -e .env.test",
     "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:ts": "eslint src seeds --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
-    "migration:reset": "yarn prisma:reset && yarn migration:all",
-    "migration:all": "yarn migration:region && yarn migration:departement && yarn migration:groupement && yarn migration:structure && yarn migration:utilisateur && yarn migration:gouvernance",
-    "migration:departement": "tsx seeds/departement.ts",
-    "migration:gouvernance": "tsx seeds/gouvernance.ts",
-    "migration:groupement": "tsx seeds/groupement.ts",
-    "migration:region": "tsx seeds/region.ts",
-    "migration:structure": "tsx seeds/structure.ts",
-    "migration:utilisateur": "tsx seeds/utilisateur.ts",
+    "lint:ts": "eslint src  --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
+    "migration:reset": "yarn prisma:reset",
     "postinstall": "husky || true && ./post-install.sh",
-    "prisma:generate:fne": "prisma generate --schema seeds/fne/schema.prisma",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:reset": "prisma migrate reset -f && yarn prisma:generate:fne",
+    "prisma:generate": "prisma generate",
+    "prisma:reset": "prisma migrate reset -f ",
     "psql:local": "docker compose up -d postgres-dev && docker exec -it min_db_dev psql -U min min",
     "psql:init": "bash scripts/psql-init.sh",
     "psql:test": "docker compose up -d postgres-test && docker exec -it min_db_test psql -U min min",
