535  ajout de la carte avec decoupage par commune

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "@types/maplibre-gl": "^1.13.2",
     "chart.js": "^4.4.9",
+    "maplibre-gl": "^5.5.0",
     "mjml": "^4.15.3",
     "mongodb": "^6.16.0",
     "nanoid": "3.3.8",
