--- a/.env
+++ b/.env
@@ -37,3 +37,5 @@ S3_SECRET_KEY=minioadmin
 S3_REGION=fr-par
 S3_BUCKET=min-bucket
 S3_ENDPOINT=http://localhost:9000
+
+INSEE_API_KEY='CLEF API SIRENE https://www.data.gouv.fr/dataservices/api-sirene-open-data/"
