714 : fix categorie juridique

--- a/.env
+++ b/.env
@@ -38,4 +38,4 @@ S3_REGION=fr-par
 S3_BUCKET=min-bucket
 S3_ENDPOINT=http://localhost:9000
 
-INSEE_API_KEY='CLEF API SIRENE https://www.data.gouv.fr/dataservices/api-sirene-open-data/"
+INSEE_API_KEY='CLEF API SIRENE https://www.data.gouv.fr/dataservices/api-sirene-open-data/'
