Ajout de la var COOP_TOKEN

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min
 # DEBUG=*
 CO_NUM_DATABASE_NAME=test
 CO_NUM_DATABASE_URL=mongodb://admin:admin@localhost:27017/
+
+COOP_TOKEN="Token pour l'API https://coop-numerique.anct.gouv.fr/api/v1/documentation#tag/statistiques"
+
 FNE_DATABASE_URL=postgresql://inclusion-numerique:password@localhost:5433/inclusion-numerique?schema=public
 
 NEXTAUTH_URL=http://localhost:3000/
