--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "minio:init": "bash scripts/init-minio.sh",
     "minio:start": "docker compose up -d minio && yarn minio:init",
     "update-subventions": "tsx scripts/update-subvention-status.ts",
-    "update-subventions:example": "tsx scripts/update-subvention-status.ts scripts/subventions_exemple.csv"
+    "update-subventions:example": "tsx scripts/update-subvention-status.ts scripts/subventions_exemple.csv",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
@@ -71,6 +73,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@storybook/addon-a11y": "^9.1.3",
+    "@storybook/addon-docs": "^9.1.3",
+    "@storybook/addon-onboarding": "^9.1.3",
+    "@storybook/addon-vitest": "^9.1.3",
+    "@storybook/nextjs-vite": "^9.1.3",
     "@stryker-mutator/core": "^8.7.1",
     "@stryker-mutator/typescript-checker": "^8.7.1",
     "@stryker-mutator/vitest-runner": "^8.7.1",
@@ -86,6 +93,7 @@
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.15.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "3.1.2",
     "@vitest/coverage-istanbul": "^3.1.2",
     "@vitest/eslint-plugin": "^1.1.36",
     "depcheck": "^1.4.7",
@@ -99,15 +107,18 @@
     "eslint-plugin-perfectionist": "^4.10.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-storybook": "^9.1.3",
     "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "knip": "^5.50.5",
+    "playwright": "^1.55.0",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "react-select-event": "^5.5.1",
+    "storybook": "^9.1.3",
     "stylelint": "^16.18.0",
     "stylelint-config-standard": "^38.0.0",
     "stylelint-order": "^7.0.0",
