805 ajout mecanisme suspense UI (#833)
Affichage async du nombre de bénéficiaires de refactor 
Ajout d'un mécanisme de delay (OK/NOK)  sur le mock API coop. Cf doc

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min
 CO_NUM_DATABASE_NAME=test
 CO_NUM_DATABASE_URL=mongodb://admin:admin@localhost:27017/
 
-COOP_TOKEN="FAKE_TOKEN : Token pour l'API https://coop-numerique.anct.gouv.fr/api/v1/documentation#tag/statistiques"
+COOP_TOKEN="FAKE_TOKEN_OK_5 : cf la documentation de l'API coop dans le readme dédié"
 
 FNE_DATABASE_URL=postgresql://inclusion-numerique:password@localhost:5433/inclusion-numerique?schema=public
 
