--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min
+DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min&application_name=min_dev
 # Debug de Prisma https://www.prisma.io/docs/orm/prisma-client/debugging-and-troubleshooting/debugging
 # DEBUG=*
 CO_NUM_DATABASE_NAME=test
