903: WIP script seeds ressorti. Création des *-utilisateurs.

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ NODE_ENV=development
 DATABASE_URL=postgresql://min:min@localhost:5432/min?schema=min&application_name=min_dev
 # Debug de Prisma https://www.prisma.io/docs/orm/prisma-client/debugging-and-troubleshooting/debugging
 # DEBUG=*
+# Pour se connecter à la prod, récupérer l'url dans le vault et la mettre dans CO_NUM_DATABASE_URL. 
+# Laisser CO_NUM_DATABASE_NAME vide
 CO_NUM_DATABASE_NAME=test
 CO_NUM_DATABASE_URL=mongodb://admin:admin@localhost:27017/
 
