905 : script de migration. Api sirene ... . Pour historique à supprimer

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@tiptap/starter-kit": "^2.11.7",
     "@types/maplibre-gl": "^1.13.2",
     "chart.js": "^4.4.9",
+    "csv-parse": "^6.1.0",
+    "csv-stringify": "^6.6.0",
     "html2canvas": "^1.4.1",
     "maplibre-gl": "^5.5.0",
     "mjml": "^4.15.3",
