--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,5 +43,5 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", ".next/**/*", "!.next/types/**/*.ts"]
+  "exclude": ["node_modules", ".next/**/*", "!.next/types/**/*.ts", "dbs/**/*"]
 }
