--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
+    "@gouvfr-anct/lieux-de-mediation-numerique": "^2.3.0",
+    "@gouvfr-anct/timetable-to-osm-opening-hours": "^2.1.0",
     "@gouvfr/dsfr": "^1.13.1",
     "@next/bundle-analyzer": "^15.3.1",
     "@prisma/client": "^6.6.0",
@@ -64,6 +66,7 @@
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "opening_hours": "^3.9.0",
     "prisma-json-types-generator": "^3.2.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
