--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "@gouvfr-anct/lieux-de-mediation-numerique": "^2.3.0",
     "@gouvfr-anct/timetable-to-osm-opening-hours": "^2.1.0",
-    "@gouvfr/dsfr": "^1.13.1",
+    "@gouvfr/dsfr": "^1.14.2",
     "@next/bundle-analyzer": "^15.3.1",
     "@prisma/client": "^6.6.0",
     "@sentry/nextjs": "^9",
@@ -74,6 +74,7 @@
     "react-dom": "^19.1.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.0",
     "sanitize-html": "^2.16.0",
     "zod": "^3.24.3"
   },
