1001 : site vitrine médiateur. Vue admin coop et interfacage API ok

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["stylelint-config-standard"],
   "plugins": ["stylelint-order"],
+  "ignoreFiles": ["src/components/coop/**/*"],
   "rules": {
     "color-no-hex": true,
     "selector-class-pattern": null,
