1001 site vitrine médiateurs (#1011)
Ajout de la page public médiateurs 
- Récupération du code de la COOP
- Interfaçage par API

NOTE Secu: découverte d'une faille majeure. https://www.cert.ssi.gouv.fr/actualite/CERTFR-2025-ACT-051/
Ajout du script yarn check:shai-hulud
Ajout de la dépendances vers recharts : dépendance à une version ancienne pour éviter une infection possible (version identique à la COOP)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "next build",
     "check": "yarn dedupe --check && yarn deadcode && yarn typecheck && yarn prisma format --check && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
+    "check:shai-hulud": "bash scripts/check-hulud.sh yarn.lock",
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": " next dev --turbo",
@@ -46,7 +47,7 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "@gouvfr-anct/lieux-de-mediation-numerique": "^2.3.0",
     "@gouvfr-anct/timetable-to-osm-opening-hours": "^2.1.0",
-    "@gouvfr/dsfr": "^1.13.1",
+    "@gouvfr/dsfr": "^1.14.2",
     "@next/bundle-analyzer": "^15.3.1",
     "@prisma/client": "^6.6.0",
     "@sentry/nextjs": "^9",
@@ -74,6 +75,7 @@
     "react-dom": "^19.1.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sanitize-html": "^2.16.0",
     "zod": "^3.24.3"
   },
